--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
+    "moment": "^2.30.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
